@@ -50,7 +50,6 @@
 #define librc_hidden_def(x) hidden_def(x)
 
 librc_hidden_proto(rc_allow_plug)
-librc_hidden_proto(rc_config_env)
 librc_hidden_proto(rc_exists)
 librc_hidden_proto(rc_filter_env)
 librc_hidden_proto(rc_find_pids)
@@ -71,6 +70,7 @@ librc_hidden_proto(rc_is_file)
 librc_hidden_proto(rc_is_link)
 librc_hidden_proto(rc_load_deptree)
 librc_hidden_proto(rc_ls_dir)
+librc_hidden_proto(rc_make_env)
 librc_hidden_proto(rc_mark_service)
 librc_hidden_proto(rc_order_services)
 librc_hidden_proto(rc_resolve_service)
